[gd_scene load_steps=11 format=3 uid="uid://dqncd65mo4qej"]

[ext_resource type="Script" path="res://Scripts/ScriptGenerales/win.gd" id="1_q11v0"]
[ext_resource type="FontFile" uid="uid://b4giw5b8c2ag0" path="res://Assets/Fonts/Pixeled.ttf" id="2_wdi2d"]
[ext_resource type="Texture2D" uid="uid://c8oyw36wdjhc" path="res://Assets/Menus/UI Package/Elements/4-2.png" id="3_svin2"]
[ext_resource type="Texture2D" uid="uid://c43f27w0ut8a6" path="res://Assets/Menus/UI Package/Elements/4-3.png" id="4_xra1n"]
[ext_resource type="Texture2D" uid="uid://dyfon2ge4fy1m" path="res://Assets/Menus/UI Package/Elements/4-1.png" id="5_t8rm8"]
[ext_resource type="AudioStream" uid="uid://blbivdegy7x36" path="res://Assets/Sounds and Music/multi-pop-1-188165.mp3" id="6_j5rw3"]

[sub_resource type="Animation" id="Animation_dc8ys"]
resource_name = "FadeIn"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_x0k5p"]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_vpudj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_otc2v"]
_data = {
"FadeIn": SubResource("Animation_dc8ys"),
"FadeOut": SubResource("Animation_x0k5p"),
"RESET": SubResource("Animation_vpudj")
}

[node name="Win" type="Node2D"]
texture_filter = 1
script = ExtResource("1_q11v0")

[node name="Node" type="Node2D" parent="."]
modulate = Color(0, 0, 0, 1)
texture_filter = 1

[node name="ColorRect" type="ColorRect" parent="Node"]
texture_filter = 1
offset_left = -16.0
offset_top = -41.0
offset_right = 1944.0
offset_bottom = 1105.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="Node/ColorRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.149998
anchor_top = -0.125
anchor_right = 0.149998
anchor_bottom = -0.125
offset_left = 408.004
offset_top = 360.25
offset_right = 1200.0
offset_bottom = 640.25
theme_override_fonts/font = ExtResource("2_wdi2d")
theme_override_font_sizes/font_size = 90
text = "YOU WIN! "
metadata/_edit_use_anchors_ = true

[node name="Title2" type="Label" parent="Node/ColorRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.149998
anchor_top = -0.125
anchor_right = 0.149998
anchor_bottom = -0.125
offset_left = 321.004
offset_top = 554.25
offset_right = 1815.0
offset_bottom = 834.25
theme_override_fonts/font = ExtResource("2_wdi2d")
theme_override_font_sizes/font_size = 50
text = "Thanks for playing! "
metadata/_edit_use_anchors_ = true

[node name="Title3" type="Label" parent="Node/ColorRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.149998
anchor_top = -0.125
anchor_right = 0.149998
anchor_bottom = -0.125
offset_left = 970.004
offset_top = 679.25
offset_right = 2464.0
offset_bottom = 959.25
theme_override_fonts/font = ExtResource("2_wdi2d")
theme_override_font_sizes/font_size = 20
text = "To be continue..."
metadata/_edit_use_anchors_ = true

[node name="Menu" type="Control" parent="Node/ColorRect"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_left = 113.0
offset_top = 313.0
offset_right = 153.0
offset_bottom = 353.0
metadata/_edit_use_anchors_ = true

[node name="Menu" type="TextureButton" parent="Node/ColorRect/Menu"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 1.65
anchor_right = 1.65
offset_left = 732.999
offset_top = 321.999
offset_right = 772.999
offset_bottom = 361.999
scale = Vector2(2, 2)
texture_normal = ExtResource("3_svin2")
texture_pressed = ExtResource("4_xra1n")
texture_hover = ExtResource("5_t8rm8")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Node/ColorRect/Menu/Menu"]
texture_filter = 1
layout_mode = 0
offset_left = 14.0005
offset_top = -4.99951
offset_right = 127.0
offset_bottom = 72.0005
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("2_wdi2d")
theme_override_font_sizes/font_size = 27
text = "Menu"
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="SFXButtons" type="AudioStreamPlayer2D" parent="."]
texture_filter = 1
stream = ExtResource("6_j5rw3")
max_polyphony = 5
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_priority = 1
libraries = {
"": SubResource("AnimationLibrary_otc2v")
}

[connection signal="mouse_entered" from="Node/ColorRect/Menu/Menu" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Node/ColorRect/Menu/Menu" to="." method="_on_menu_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
